Fixed font size and text wrapping on `movieDetails.html` and `personDetails.html`

--- a/public/css/pageLayout.css
+++ b/public/css/pageLayout.css
@@ -21,8 +21,9 @@
 }
 
 .topRow h2 {
-    font-size: clamp(1rem, 5vw, 3rem);
+    font-size: clamp(1rem, 4vw, 2.5rem);
     font-weight: 700;
+    text-wrap: balance;
 }
 
 .topRow i {
